# StudyPlan

./: .gitignore  CHANGELOG.md  README.md  app.js  build-web.js  index.html  main.js  package-lock.json  package.json  preload.js  styles.css  tauri-bridge.js  widget-studyplan.html
.github/workflows/: build-windows.yml  release-all.yml
assets/: studyplan-icon.icns
client/: index.html  package-lock.json  package.json  vite.config.js  widget-studyplan.html
client/src/: App.jsx  api.js  index.css  main.jsx  tauri-api.js
client/src/components/: CareerExamModal.jsx  EventModal.jsx  PrivacyShield.jsx  SettingsModal.jsx  Sidebar.jsx  WindowControls.jsx
client/src/lib/: constants.js
client/src/pages/: CareerPage.jsx  MonthPage.jsx  StatsPage.jsx  TodayPage.jsx  WeekPage.jsx
scripts/: gen_icon_from_sidebar_svg.py  generate-icon.py
services/: biometrics.js  keychain.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
