[package]
name = "studyplan"
version = "1.6.10"
description = "StudyPlan - Calendario e pianificatore esami per studenti"
authors = ["StudyPlan Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rand = "0.8"
whoami = "1"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
