[package]
name = "studyplan"
version = "2.0.0"
description = "StudyPlan - Calendario e pianificatore esami per studenti"
authors = ["StudyPlan Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rand = "0.8"
whoami = "1"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["time"] }

# macOS-only: App Nap prevention via NSProcessInfo FFI
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.1"

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
