[package]
name = "studyplan"
version = "2.0.0"
description = "StudyPlan - Calendario e pianificatore esami per studenti"
authors = ["StudyPlan Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rand = "0.8"
whoami = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["time"] }

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon", "tauri/macos-private-api"]
mobile = []

# Desktop-only dependencies (keyring, open non compilano su Android)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native"] }
open = "5"

# Android: keyring senza features native
[target.'cfg(target_os = "android")'.dependencies]
keyring = { version = "3", features = [] }

# macOS-only: App Nap prevention via NSProcessInfo FFI
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.1"

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
